--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
       <button class="btn again">Start over!</button>
     </header>
     <button class="btn start">Start Quiz!</button>
+    <div class="btn hidden"></div>
     <main>
       <section class="left">
         <button class="btn check">Check answers!</button>
       </section>
       <div id="quiz"></div>
-      <div id="results">Results</div>
+      <div id="results"></div>
       <section class="right">
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          🥇 Highscore: <span class="highscore">0 / 10</span>
         </p>
       </section>
     </main>
+    <div class="overlay hidden"></div>
     <script src="script.js"></script>
   </body>
 </html>
