--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <body>
     <header>
       <h1>Gotlands Quiz!</h1>
-      <p class="between">(10 questions)</p>
+      <p class="info">(10 questions)</p>
       <button class="btn again">Start over!</button>
     </header>
     <button class="btn start">Start Quiz!</button>
-    <div class="btn hidden"></div>
     <main>
       <section class="left">
         <button class="btn check">Check answers!</button>
