dark-light-mode

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <main>
       <section class="left">
         <button class="btn check">Check answers!</button>
+        <button class="btn dark">Dark Mode!</button>
+        <button class="btn light">Light Mode!</button>
       </section>
       <div id="quiz"></div>
       <div id="results"></div>
